[project]
name = "omocaptcha-py"
version = "0.0.16"
authors = [
    { name = "MehdiRtal", email = "mehdirtal7@pm.me" }
]
dependencies = [
    "httpx>=0.27.0",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["omocaptcha_py"]
